tests/snapshots/runtime_error_fixtures/indirect_call_wrong_arity.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/indirect_call_wrong_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
[8 of 8] Compiling  indirect_call_wrong_arity
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/indirect_call_wrong_arity.flx
error[E1000]: wrong number of arguments: want=2, got=1

  examples/runtime_errors/indirect_call_wrong_arity.flx:7:19
  |
7 |     let ignored = f(1)
  |                   ^^^^

Stack trace:
  at main (examples/runtime_errors/indirect_call_wrong_arity.flx:7:19)
  at <main>
